18.2.2003	<mschimek@users.sf.net>

	* po/LINGUAS, po/da.po, THANKS: Added Danish translation
	  by Morten Brix Pedersen.

16.2.2003	<mschimek@users.sf.net>

	* Release 0.6.6.

16.2.2003	<mschimek@users.sf.net>

	* configure.in: Don't build static libraries (plugins)
	  by default. We never use them.

08.2.2003	<mschimek@users.sf.net>

	* src/zmisc.c (zmisc_switch_mode): Save video standard.

	V4L2 Linux 2.5 port:
	* common/Makefile.am: Added videodev25.h.
	* src/Makefile.am: Added tveng25.c, tveng25.h.
	* zapping_setup_fb/Makefile.am: Fixed incorrect $(DESTDIR)
	  prefix in csfb.capps. Added v4l25 target.
	* zapping_setup_fb/zapping_setup_fb.c,
	  zapping_setup_fb/v4l25.c: Added v4l2 2.5 interface.

23.1.2003	<mschimek@users.sf.net>

	* src/main.c, src/tveng.c, src/tveng1.c, src/tveng2.c,
	  src/tvengxv.c: Added disable_overlay (--remote) option.

19.1.2003	<mschimek@users.sf.net>

	* zapping_setup_fb/Makefile.am, zapping_setup_fb/dga.c,
	  zapping_setup_fb/zapping_setup_fb.c,
	  zapping_setup_fb/zapping_setup_fb.h, 
	  zapping_setup_fb/v4l.c, zapping_setup_fb/v4l2.c: Separated
	  video driver interface, added v4l2 interface.
	* zapping_setup_fb/zapping_fix_overlay: test correction.

15.1.2003

	* src/audio.c (audio_set_mute): Unmute tv audio when unmuting
	  mixer line.
	* src/main.c: Const fix.

5.1.2003	<mschimek@users.sf.net>

	* src/tveng1.c: Fixed audio mode selection.

3.1.2003	<mschimek@users.sf.net>

	* glade: Added force_mixer checkbutton in audio prefs.
	* src/audio.c, src/audio.h: Added force_mixer checkbutton,
	  new master mute functions.
	* src/callback.c, src/main.c, src/zmisc.c, src/v4linterface.c:
	  Use audio_xxx_mute().

28.12.2002	<mschimek@users.sf.net>

	* src/tveng.h: mutable.
	* src/tveng1.c, src/tveng2.c, src/tvengxv.c: Set
	  info->audio_mutable flag.
	* src/tveng2.c: Bttv mute bug work-around.
	* src/mixer.h, src/mixer.c: Added mute function.
	* src/main.c, src/zmisc.c, src/callback.c (set_mute1): Mute