@@ -2,6 +2,7 @@
 
 	* po/LINGUAS, po/da.po, THANKS: Added Danish translation
 	  by Morten Brix Pedersen.
+	* src/main.c, src/tvengxv.c: Added --xv-port option.
 
 16.2.2003	<mschimek@users.sf.net>
 
